fix methane id
